Bug 54388 - The '--cflags-only-*' and '--libs-only-*' option shouldn't be exclusive with other similar options
Summary: The '--cflags-only-*' and '--libs-only-*' option shouldn't be exclusive with ...
Status: RESOLVED FIXED
Alias: None
Product: pkg-config
Classification: Unclassified
Component: src (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Dan Nicholson
QA Contact:
URL:
Whiteboard:
Keywords:
: 91689 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-09-02 12:07 UTC by Michał Górny
Modified: 2015-08-19 22:01 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Michał Górny 2012-09-02 12:07:28 UTC
Currently, the '--cflags-only-*' and '--libs-only-*' options are exclusive to other options from that group. It would be however useful to get output like:

$ pkg-config --libs-only-L --libs-only-other ...

or

$ pkg-config --libs-only-L --libs-only-l ...
Comment 1 Dan Nicholson 2012-10-29 02:53:34 UTC
Good point. I have something going locally that should fix this.
Comment 2 Dan Nicholson 2012-11-03 18:09:53 UTC
Fixed in commit 90ed8f1. You can now pass any combinations of --cflags and --libs you want.
Comment 3 Mostyn Bramley-Moore 2015-08-19 22:01:58 UTC
*** Bug 91689 has been marked as a duplicate of this bug. ***


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.